# Video-SnapShot-based-on-ffmpeg

./: CMakeLists.txt  README.md
microbench/: avframe_wrapper.cpp  ffmpeg_decode_sample.c
src/: CMakeLists.txt  DegitPixel.h  VideoContactSheet.cpp  VideoContactSheet.h  main.cpp
